chore: prevent vertical scrollbar in reshare form

--- a/views/default/css/thewire_tools.css
+++ b/views/default/css/thewire_tools.css
@@ -7,10 +7,6 @@
 	background-color: #EEE;
 }
 
-#thewire-tools-reshare-wrapper {
-	min-width: 600px;
-}
-
 .thewire-thread {
 	display: none;
 	margin-left: 5px;
